--- a/css/pages/quotes.css
+++ b/css/pages/quotes.css
@@ -15,18 +15,9 @@
   margin-bottom: 0;
 }
 
-/* Decorative curve at bottom of header for smooth transition */
+/* Remove decorative curve */
 .quotes-header::after {
-  content: '';
-  position: absolute;
-  bottom: -1px;
-  left: 0;
-  width: 100%;
-  height: 50px;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 70'%3E%3Cpath d='M0,70 C240,30 480,0 720,0 C960,0 1200,30 1440,70 L1440,70 L0,70 Z' fill='%23ffffff'/%3E%3C/svg%3E");
-  background-size: cover;
-  background-position: center;
-  z-index: 2;
+  display: none;
 }
 
 .quotes-header::before {
